<resources>
    <string name="app_name">EcoWise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai_kelola_energi_jejak_karbon_rumahmu"><![CDATA[Mulai kelola energi & jejak karbon rumahmu!]]></string>
    <string name="selamat_datang">Selamat Datang 👋🏻</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="atau_daftar_dengan">atau daftar dengan</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="dafter">Dafter</string>
    <string name="daftarkan_diri">Daftarkan diri,</string>
    <string name="nama">Nama</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="login">Masuk</string>
    <string name="hemat_penggunaan_energimu">Hemat penggunaan energimu!</string>
    <string name="profile_user">profile User</string>
    <string name="energi_terpakai">Energi terpakai</string>
    <string name="_26_maret_2024">26 Maret 2024</string>
    <string name="colokan">\ncolokan</string>
    <string name="hari_ini">Hari ini</string>
    <string name="bulan_ini">Bulan ini</string>
    <string name="tantangan_hadrian">Tantangan Harian</string>
    <string name="kumpulkan_poin_dengan_menghemat_energi">Kumpulkan poin dengan menghemat energi!</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="beranda">Beranda</string>
    <string name="tambah">Tambah</string>
    <string name="merchant">Merchant</string>
    <string name="akun">Akun</string>
    <string name="elektronik">Elektronik</string>
    <string name="title_activity_memek">MemekActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perangkat_terhubung">Perangkat Terhubung</string>
    <string name="satu_langkah_penghematan_bermakna">Satu langkah penghematan bermakna!</string>
    <string name="konsumsi_energi">Konsumsi Energi</string>
    <string name="lihat_statistik_konsumsi_energimu">Lihat statistik konsumsi energimu!</string>
    <string name="history">history</string>
    <string name="total">Total</string>
    <string name="harian">Harian</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="kamar_tidur">Kamar Tidur</string>
    <string name="ruang_kerja">Ruang Kerja</string>
    <string name="dapur">Dapur</string>
    <string name="kamar_mandi">Kamar Mandi</string>
    <string name="putri_sari">Putri Sari</string>
    <string name="rizal_nur">Rizal Nur</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="laporan_penggunaan">Laporan Penggunaan</string>
    <string name="buat_perubahan_pada_akun_anda">Buat perubahan pada akun Anda</string>
    <string name="lihat_laporan_evaluasi_anda">Lihat laporan evaluasi Anda</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="atur_aplikasi_anda_sesuai_kebutuhan">Atur aplikasi Anda sesuai kebutuhan</string>
    <string name="log_out">Log Out</string>
    <string name="more">More</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="konsumsi_energia">Konsumsi Energi</string>
    <string name="penghematan">Penghematan</string>
    <string name="detail">Detail</string>
    <string name="mencari_perangkat">Mencari Perangkat</string>
    <string name="icon_type">icon type</string>
    <string name="lihat_detail_energi_yang_dikeluarkan">Lihat detail energi yang dikeluarkan</string>
    <string name="mencari_perangkat_di_sekitar_anda">Mencari Perangkat di Sekitar Anda</string>
    <string name="silakan_aktifkan_wifi_dan_bluetooth_dekatkan_diri_anda_sedekat_mungkin_dengan_perangkat_yang_ingin_dicari_dan_tunggu_dengan_sabar">Silakan aktifkan wifi dan bluetooth, dekatkan diri Anda sedekat mungkin dengan perangkat yang ingin dicari dan tunggu dengan sabar.</string>
    <string name="logo">Logo</string>
    <string name="_22_5kwh">22.5kWh</string>
    <string name="kategori">Kategori</string>
    <string name="temukan_barang_yang_kamu_inginkan">Temukan barang yang kamu inginkan</string>
    <string name="televisi">Televisi</string>
    <string name="ac">AC</string>
    <string name="cctv">CCTV</string>
    <string name="kipas">Kipas</string>
    <string name="_10_off">10% off</string>
    <string name="rp_100_000">Rp 100,000</string>
    <string name="exchange_offer_more"><![CDATA[Exchange Offer & more]]></string>
</resources>