<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp"
    tools:context=".ui.bnv.MerchantFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp" >


    <ImageView
        android:id="@+id/iv_iconLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_notfi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/notif"
        app:layout_constraintBottom_toBottomOf="@+id/iv_iconLogo"
        app:layout_constraintEnd_toStartOf="@+id/iv_cart"
        app:layout_constraintTop_toTopOf="@+id/iv_iconLogo" />

    <ImageView
        android:id="@+id/iv_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/keranjang"
        app:layout_constraintBottom_toBottomOf="@+id/iv_notfi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_notfi" />


    <com.google.android.material.search.SearchBar
        android:id="@+id/sb_product"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_iconLogo" />


    <ImageView
        android:id="@+id/iv_filter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sb_product"
        app:layout_constraintBottom_toBottomOf="@+id/sb_product"
        tools:src="@drawable/filter" />

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/sb_product"
        tools:src="@drawable/banner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kategori"
        android:textAppearance="@style/TextAppearance.EcoWise.LabelMedium.Medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner" />


    <TextView
        android:id="@+id/tv_lookAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_semua"
        android:textAppearance="@style/TextAppearance.EcoWise.LabelSmall.Regular"
        android:textColor="@color/grey_text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_kategori"
        app:layout_constraintBottom_toBottomOf="@+id/tv_kategori"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_category_merch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kategori">

        <ImageView
            android:id="@+id/iv_kamarTidur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:src="@drawable/tv"
            app:layout_constraintEnd_toStartOf="@+id/iv_ruangKerja"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_kamarTidur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/televisi"
            android:textAppearance="@style/TextAppearance.EcoWise.LabelMedium.Regular"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_kamarTidur"
            app:layout_constraintStart_toStartOf="@+id/iv_kamarTidur"
            app:layout_constraintTop_toBottomOf="@+id/iv_kamarTidur" />

        <ImageView
            android:id="@+id/iv_ruangKerja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:src="@drawable/ac_kotak"
            app:layout_constraintEnd_toStartOf="@+id/iv_dapur"
            app:layout_constraintStart_toEndOf="@+id/iv_kamarTidur"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ruangKerja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/ac"
            android:textAppearance="@style/TextAppearance.EcoWise.LabelMedium.Regular"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_ruangKerja"
            app:layout_constraintStart_toStartOf="@+id/iv_ruangKerja"
            app:layout_constraintTop_toBottomOf="@+id/iv_ruangKerja" />

        <ImageView
            android:id="@+id/iv_dapur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:src="@drawable/cctv"
            app:layout_constraintEnd_toStartOf="@+id/iv_kamarMandi"
            app:layout_constraintStart_toEndOf="@+id/iv_ruangKerja"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dapur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/cctv"
            android:textAppearance="@style/TextAppearance.EcoWise.LabelMedium.Regular"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_dapur"
            app:layout_constraintStart_toStartOf="@+id/iv_dapur"
            app:layout_constraintTop_toBottomOf="@+id/iv_dapur" />

        <ImageView
            android:id="@+id/iv_kamarMandi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:src="@drawable/kipas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_dapur"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_kamarMandi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/kipas"
            android:textAppearance="@style/TextAppearance.EcoWise.LabelMedium.Regular"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_kamarMandi"
            app:layout_constraintStart_toStartOf="@+id/iv_kamarMandi"
            app:layout_constraintTop_toBottomOf="@+id/iv_kamarMandi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_hot_deals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kategori"
        android:textAppearance="@style/TextAppearance.EcoWise.LabelMedium.Medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_category_merch" />

    <TextView
        android:id="@+id/tv_hot_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temukan_barang_yang_kamu_inginkan"
        android:textAppearance="@style/TextAppearance.EcoWise.LabelSmall.Regular"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hot_deals" />

    <TextView
        android:id="@+id/tv_lookAllMerch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_semua"
        android:textAppearance="@style/TextAppearance.EcoWise.LabelSmall.Regular"
        android:textColor="@color/grey_text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_hot_deals"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hot_deals"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hot_desc"
        app:spanCount="2"
        tools:listitem="@layout/card_product" />

</androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.core.widget.NestedScrollView>